<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="item_collect">收藏文章</string>
    <string name="item_web">收藏网站</string>
    <string name="item_article">分享文章</string>
    <string name="alert_input_title_hint">title</string>
    <string name="alert_input_link_hint">link</string>
    <string name="alert_input_author_hint">author</string>
    <string name="alert_confirm_btn_share">share</string>
    <string name="alert_confirm_btn_collect">collect</string>
    <string name="alert_delete_btn">delete</string>
</resources>