<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.WanAndroid">

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_article"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alert_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_cancel_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alert_input_layout_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/alert_input_title_hint"
            app:layout_constraintTop_toBottomOf="@id/alert_close">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alert_input_layout_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/alert_input_link_hint"
            app:layout_constraintTop_toBottomOf="@id/alert_input_layout_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_input_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alert_input_layout_author"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/alert_input_author_hint"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/alert_input_layout_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alert_input_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/alert_confirm_btn_share"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/alert_input_layout_author"
            app:layout_constraintTop_toBottomOf="@id/alert_input_layout_author" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/alert_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_delete_btn"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/alert_confirm_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/alert_confirm_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>